Refactorings.
A bit nervous about introding AtomicReference<List>, but that was what intellij suggested when using lambda.